# comic-publisher

./: .gitignore  Cargo.toml  azure-pipelines.yml
core/: .gitignore
core/static/: style.css
core/templates/: comic.html
qside2-client/: .gitignore  Pipfile  setup.py
qside2-client/comic_publisher/: main.py
scripts/: build.bat
src/: main.rs
static/: style.css
templates/: base.html  comic.html  index.html  page.html
