[package]
name = "comics"
version = "0.1.0"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1.0.0-beta.13"
